# locality-in-diffusion-models

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  download_baseline_weights.py  generate.py  playground.ipynb  pyproject.toml  run_all_baslines.sh
configs/: defaults.yaml
configs/nearest_dataset/: afhq.yaml  celeba_hq.yaml  cifar10.yaml  fashion_mnist.yaml  mnist.yaml
configs/optimal/: afhq.yaml  celeba_hq.yaml  cifar10.yaml  fashion_mnist.yaml  mnist.yaml
configs/pca_locality/: afhq.yaml  celeba_hq.yaml  cifar10.yaml  fashion_mnist.yaml  mnist.yaml
configs/wiener/: afhq.yaml  celeba_hq.yaml  cifar10.yaml  fashion_mnist.yaml  mnist.yaml
src/local_diffusion/: configuration.py  metrics.py
src/local_diffusion/data/: __init__.py  datasets.py  image_folder_datasets.py  torchvision_datasets.py  utils.py
src/local_diffusion/models/: __init__.py  base.py  baseline_unet.py  nearest_dataset.py  optimal.py  pca_locality.py  wiener.py
src/local_diffusion/utils/: __init__.py  wiener.py
